 * Bug fix: fix a bug with layer sorting that prevented the Export screen from opening

-- Version 2.18.2, released 19-6-2023

 * Bug fix: fix a deserialisation error that occurred when loading some existing worlds

-- Version 2.18.1, released 17-6-2023

 * When importing a height map into the current dimension you can now choose to leave the terrain type alone
 * You can now drag and drop files onto the WorldPainter window to open them
   + .world files will be loaded as a WorldPainter world
   + Image files will allow you to choose to import them as a new world, a height map into the current dimension, or an image mask
 * Bug fix: fixed a NullPointerException that occurred when loading some older worlds
 * Bug fix: fixed an error when trying to Export a world that has Combined Layers which contain non-custom layers (e.g. Frost)
 * Bug fix: fix preview of leaf blocks that have a waterlogged property

-- Version 2.18.0, released 11-6-2023

 * Height map and mask import changes:
   + Floating point images are now supported for height maps and masks
   + 32-bit unsigned integer images are now supported for masks (they already were for height maps)
   + When opening the screen, the file selection dialog is now immediately shown
 * Custom Layers tab on the Export screen:
   + It now shows the constituent layers of Combined Layers, instead of the Combined Layers themselves
   + A "select" button has been added to allow selection of the layer from the map with the eyedropper
 * It is now possible to add a Nether or End dimension to Imported worlds
 * Crimson and Warped stems and hyphae are now treated as "logs" for purposes of leaf distance calculations
 * Some small usability improvements
 * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
 * Bug fix: selecting a paint from the map does not crash inside the selection (or when other system layers are present)